# TP_DAIOT_Privado

./: CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  DHT22.c  DHT22.h  TP_DAIOT.c  aws-iot.c  aws-iot.h  tasks_common.h
main/certs/Node_ESP32/: 97d7fea30fe5d2c36c129eb57cced913a925b30665f776a7c7e3b98e26f8f189-certificate.pem.crt  97d7fea30fe5d2c36c129eb57cced913a925b30665f776a7c7e3b98e26f8f189-public.pem.key  private_pem_key
main/certs/TP_DaIoT_NodeRed/: 7b417005950c06f5af938cd737dbe28183e4e603d0cd9cb467b4d971ec104c05-certificate.pem.crt  7b417005950c06f5af938cd737dbe28183e4e603d0cd9cb467b4d971ec104c05-private.pem.key  7b417005950c06f5af938cd737dbe28183e4e603d0cd9cb467b4d971ec104c05-public.pem.key
main/certs/certs_Daiot/: certificate_pem_crt  ebfd1c9f8101510cf8113f2e6557fe3d326d949e68ae6eaf3d221e241191830d-public.pem.key  private_pem_key
